# statistix

./: .env.example  .gitignore  ADAPTER.md  EXTENSIONS.md  FAST-SETUP.md  LICENSE  README.md  TODO.md  docker-compose.prod.yml  docker-compose.yml  readme.md
.github/workflows/: docker_compose_build_test.yml
.husky/: pre-commit
backend/: Dockerfile  main.py  requirements.txt
backend/controllers/: arima.py  linear_reg.py
backend/models/: arima.py
backend/routers/: arima.py  linear_reg.py
backend/services/: arima.py  linear_reg.py
client/: package.json
client/src/: index.js
clients/web/: .env.example  .prettierrc  README.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
infrastructure-services/caddy/: Caddyfile  Dockerfile
infrastructure-services/nginx/: Dockerfile.dev  entrypoint.sh  nginx.dev.conf  nginx.dev.template
model-service/: Dockerfile  main.py  pyproject.toml
model-service/controllers/: TimeSeriesModels.py  arima.py
model-service/models/: TimeSeriesModels.py  arima.py
model-service/routers/: TimeSeriesModels.py  arima.py
model-service/services/: TimeSeriesModels.py  arima.py
search/: controller.js  index.js  init.js  middleware.js  model.js  package.json  router.js  service.js
services/service_authentification/: .prettierrc  Dockerfile  Dockerfile.dev  README.md  eslint.config.mjs  package-lock.json  package.json
services/service_file-managment/: Dockerfile  README.md  (+3 more)
utils-service/: Dockerfile  controller.js  exception.js  index.js  init.js  package.json  router.js  service.js
(+522 files in other folders)
