[tool.poetry]
name = "model-service"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.6"
fastapi = "^0.115.8"
uvicorn = "^0.34.0"
statsmodels = "^0.14.4"
pydantic = "^2.10.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
